Update documentation and add license.