@@ -25,6 +25,8 @@ import java.util.concurrent.atomic.AtomicInteger;
  * expect {@link Runtime#availableProcessors()} active threads but with an effective
  * concurrency of {@code 1}.
  * <p>
+ * Run this example with {@code -Djdk.tracePinnedThreads=full} to obtain thread pinning details.
+ * <p>
  * This is an indication that the lock on the code path should be resolved into a
  * Loom-friendly lock mechanism.
  */
